# tarpack

./: .gitignore  CMakeLists.txt  README.md  deep-research-report.md
.github/workflows/: ci.yml
src/: checksum.c  checksum.h  index.c  index.h  main.c  manifest.c  manifest.h  object.c  object.h  packer.c  packer.h  restore.c  restore.h  scanner.c  scanner.h  upload.c  upload.h  util.c  util.h  verify.c  verify.h
tests/integration/: test_content_aware.sh  test_crash_resume.sh  test_incremental.sh  test_multipack.sh  test_pack.sh  test_roundtrip.sh  test_scan.sh  test_times.sh
tests/unit/: test_binpack.c  test_checksum.c  test_entropy.c  test_index.c  test_manifest.c  test_object.c  test_pack_manifest.c  test_packer_select.c  test_restore_paths.c  test_sha256.c  test_upload_argv.c  test_util.c
